# ceremegbellum

./: .gitignore  Dockerfile  LICENSE  README.md  README.rst  functions.py  requirements.txt  requirements_test.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
cmb/: __init__.py  example_script.py  functions copy.py  functions.py  functions.py.orig  helpers.py  is_float.py  source_space.py  test.py  visualization.py
examples/: ex_segmentation.py  example_script.py  run_sample.py
tests/: test.py  test_simple_cmb.py
