[metadata]
name = cmb
version = 0.0.1
author = cmb developers
maintainer = John Gustaf Wilhelm Samuelsson
maintainer_email = johnsam@mit.edu
description = Cere-MEG-Bellum (CMB) - Cerbellum segmentation and forward solution calculation
long_description = file: README.md
long_description_content_type = text/markdown
keywords = MEG cerebellum mne python
license = MIT
license_files = LICENSE
url = https://github.com/johnsam7/ceremegbellum
project_urls =
    Bug Tracker = https://github.com/johnsam7/ceremegbellum/issues
    Source = https://github.com/johnsam7/ceremegbellum
classifiers =
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = cmb
packages = find:
python_requires = >=3.7

[options.packages.find]
where = cmb