# [metadata]
# name = cmb
# url = https://github.com/johnsam7/ceremegbellum
# author = cmb developers
# maintainer = John Gustaf Wilhelm Samuelsson
# maintainer_email = johnsam@mit.edu
# description = Cere-MEG-Bellum (CMB) - Cerbellum segmentation and forward solution calculation
# long_description = file: README.md
# long_description_content_type = text/markdown
# keywords = MEG cerebellum mne python
# license = MIT
# license_files = LICENSE
# platforms = any
# classifiers =
#     Intended Audience :: Science/Research
#     Intended Audience :: Developers
#     License :: OSI Approved :: MIT License
#     Topic :: Scientific/Engineering
#     Programming Language :: Python :: 3
#     Development Status :: 1 - Planning
#     Operating System :: POSIX :: Linux
# project_urls =
#     Bug Tracker = https://github.com/johnsam7/ceremegbellum/issues
#     Source = https://github.com/johnsam7/ceremegbellum

# [options]
# python_requires = >=3.7
# install_requires =
#TBD uncomment for release build
#  numpy >= 1.21.2
#  scipy >= 1.7.1
#  mne >= 0.23.4
#  matplotlib >= 3.4.3
#  nibabel >= 3.2.1
#  nnunet >= 1.7.0
#  plyfile >= 0.7.4
#  antspyx >= 0.2.9
#  pandas >= 1.3.3
# packages = find:
# include_package_data = True

# [options.packages.find]
# exclude =
#     tests

# [bdist_wheel]
# universal = true